# DICOM-Image-Tool

./: .gitignore  CMakeLists.txt  README.md
Testing/: TAG
Testing/20240506-1519/: Test.xml
app/: CMakeLists.txt  main.cpp
app/inc/: app.h  dcmtk.h  dicom.h  dicomInterface.h  dicomReader.h  fileHandle.h  frame.h  image.h  imageProcessor.h  main.h  messageQueue.h  myImage.h  processor.h  processorAdapter.h  thread.h
app/src/: app.cpp  dcmtk.cpp  dicom.cpp  dicomReader.cpp  dicom_metadata.txt  fileHandle.cpp  frame.cpp  image.cpp  imageProcessor.cpp  main.cpp  myImage.cpp  processor.cpp  processorAdapter.cpp  thread.cpp
test/: CMakeLists.txt
test/inc/: mockDicomReader.h
test/src/: dcmtk_test.cpp  dicom_test.cpp  fileHandle_test.cpp  messageQueue_test.cpp  processor.cpp  processor_test..cpp
